# claude-code-analysis

./: .gitignore  README.md  main.py  plot.py  plot_analysis.py  pyproject.toml
data/: ai_assistant_github_analysis.json
